feature: improve AI tool descriptions and harden file access security